--- a/thesis_experiment_android/app/src/main/AndroidManifest.xml
+++ b/thesis_experiment_android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".ui.main.activity.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.Accent"
             android:screenOrientation="portrait"/>
 
         <activity
