--- a/thesis_experiment_android/build.gradle
+++ b/thesis_experiment_android/build.gradle
@@ -1,12 +1,20 @@
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    ext {
+        version_kotlin = "1.4.32"
+        version_core = "1.3.1"
+        version_constraint_layout = "2.0.4"
+        version_lifecycle_extensions = "2.2.0"
+        version_material = "1.3.0"
+        version_navigation = "2.3.0"
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
