Hello world updates

--- a/android/hello_world_android/app/src/main/AndroidManifest.xml
+++ b/android/hello_world_android/app/src/main/AndroidManifest.xml
@@ -3,16 +3,12 @@
     package="com.example.hello_world_android">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="hello_world_android"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Hello_world_android">
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
