--- a/flutter/thesis_experiment_flutter/pubspec.yaml
+++ b/flutter/thesis_experiment_flutter/pubspec.yaml
@@ -14,15 +14,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation:
-  http: 0.13.3
-  shared_preferences: ^0.5.12+4
+  http: ^0.13.3
+  dio: ^4.0.0
+  cached_network_image: ^3.1.0
+  permission_handler: ^8.1.4+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.0
-  json_serializable: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
